...
            android:text="WHO ARE YOU ?"
            android:textColor="#5E0595"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="name"
            android:maxWidth="100dp"
            android:maxHeight="50dp" />
...
            android:layout_toRightOf="@id/avatarText"
            android:src="@mipmap/coffee"
            android:tag="avatar" />
    </RelativeLayout>

    <Button
        android:id="@+id/saveUserInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RelativeAvatarSection"
        android:layout_marginTop="50dp"
        android:text="Save User"

...
