<resources>
    <string name="app_name">smartTaskApp</string>
    <string name="all">All</string>
    <string name="later">later</string>
    <string name="today">today</string>
    <string name="write_something_to_search">write something to search</string>
    <string name="error_invalid_name">INVALID NAME</string>
</resources>